--- a/ead/curso.html
+++ b/ead/curso.html
@@ -58,7 +58,7 @@
 
 <body>
 
-    <!-- Start Left menu area -->
+   <!-- Start Left menu area -->
     <div class="left-sidebar-pro">
         <nav id="sidebar" class="">
             <div class="sidebar-header">
@@ -151,8 +151,8 @@
                                     <div class="col-lg-1 col-md-0 col-sm-1 col-xs-12">
                                         <div class="menu-switcher-pro">
                                             <button type="button" id="sidebarCollapse" class="btn bar-button-pro header-drl-controller-btn btn-info navbar-btn">
-													<i class="educate-icon educate-nav"></i>
-												</button>
+                                                    <i class="educate-icon educate-nav"></i>
+                                                </button>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-7 col-sm-6 col-xs-12">
@@ -358,7 +358,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                         <div class="breadcome-heading">
-                                            <h2 class="logged-home">Bem-vindo(a), Gabriela Gonçalves</h2>
+                                            <h2 class="logged-home">Meus Cursos | Crypto Money</h2>
                                         </div>
                                     </div>
                                 </div>
@@ -368,88 +368,28 @@
                 </div>
             </div>
         </div>
- 
-        <section class="continuar-assistindo">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <h3>Pronto para voltar?</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                        <div class="card video-card">
-                            <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
-        <div class="traffic-analysis-area mg-tb-30">
+        <div class="courses-area">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <h3>Investindo do Zero</h3>
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-xs-6 hidden-xs">
-                        <div class="controls pull-right">
-                            <a class="left fa fa-chevron-left btn btn-info " href="#carousel-example" data-slide="prev"></a><a class="right fa fa-chevron-right btn btn-info" href="#carousel-example" data-slide="next"></a>
-                        </div>
-                    </div>
-                </div>
-                <div id="carousel-example" class="carousel slide hidden-xs" data-ride="carousel" data-type="multi">
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
-                                    </div>
-                                </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                        <div class="courses-inner res-mg-b-30">
+                            <div class="courses-title">
+                                <a href="#"><img src="assets/img/courses/1.jpg" alt=""></a>
+                                <h2>Investindo do ZERO</h2>
                             </div>
-                        </div>
-                        <div class="item">
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="courses-alaltic">
+                                <span class="cr-ic-r"><span class="course-icon"><i class="fa fa-clock"></i></span> 100 Alunos</span>
+                                <span class="cr-ic-r"><span class="course-icon"><i class="fa fa-heart"></i></span> 50</span>
+                                <span class="cr-ic-r"><span class="course-icon"><i class="fa fa-dollar"></i></span> Grátis</span>
+                            </div>
+                            <div class="course-des">
+                                <p><span><i class="fa fa-clock"></i></span> <b>Duração:</b> 2 Meses</p>
+                                <p><span><i class="fa fa-clock"></i></span> <b>Professor:</b> Jhow Gama</p>
+                                <p><span><i class="fa fa-clock"></i></span> <b>Horas:</b> 120hrs</p>
+                            </div>
+                            <div class="product-buttons text-center">
+                                <button type="button" class="button-default cart-btn">Saiba Mais</button>
                             </div>
                         </div>
                     </div>
